; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_ina2xx.c_ina226_reg_to_interval.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_ina2xx.c_ina226_reg_to_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ina226_avg_tab = common dso_local global i32* null, align 8
@INA226_TOTAL_CONV_TIME_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ina226_reg_to_interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ina226_reg_to_interval(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32*, i32** @ina226_avg_tab, align 8
  %5 = load i32, i32* %2, align 4
  %6 = call i64 @INA226_READ_AVG(i32 %5)
  %7 = getelementptr inbounds i32, i32* %4, i64 %6
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @INA226_TOTAL_CONV_TIME_DEFAULT, align 4
  %11 = mul nsw i32 %9, %10
  %12 = call i32 @DIV_ROUND_CLOSEST(i32 %11, i32 1000)
  ret i32 %12
}

declare dso_local i64 @INA226_READ_AVG(i32) #1

declare dso_local i32 @DIV_ROUND_CLOSEST(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
